kube/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cafeteria
  labels:
    name: cafeteria
