kube/tailscale-sidecar.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafeteria-api-server-dep
  namespace: cafeteria
spec:
  template:
    spec:
      containers:
        - name: tailscale-sidecar
          image: tailscale/tailscale:stable
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          volumeMounts:
            - name: tailscale-state
              mountPath: /var/lib/tailscale
            - name: dev-net-tun
              mountPath: /dev/net/tun
      volumes:
        - name: tailscale-state
          emptyDir: {}
        - name: dev-net-tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice
