kube/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafeteria-api-server-dep
  namespace: cafeteria
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cafeteria-api

  template:
    metadata:
      labels:
        app: cafeteria-api
    spec:
      containers:
        - name: cafeteria-api-container
          image: tjwalkr3/cafeteria-api:$CONTAINER_VERSION
          ports:
            - containerPort: 8080
        - name: tailscale-sidecar
          image: tailscale/tailscale:stable
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          volumeMounts:
            - name: tailscale-state
              mountPath: /var/lib/tailscale
            - name: dev-net-tun
              mountPath: /dev/net/tun
      volumes:
        - name: tailscale-state
          emptyDir: {}
        - name: dev-net-tun
          hostPath:
            path: /dev/net/tun
            type: CharDevice

---
apiVersion: v1
kind: Service
metadata:
  name: cafeteria-api-svc
  namespace: cafeteria
spec:
  selector:
    app: cafeteria-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
