kube/customer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafeteria-customer-dep
  namespace: cafeteria
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cafeteria-customer

  template:
    metadata:
      labels:
        app: cafeteria-customer
    spec:
      containers:
        - name: cafeteria-customer-container
          image: tjwalkr3/cafeteria-customer:$CONTAINER_VERSION
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: cafeteria-customer-svc
  namespace: cafeteria
spec:
  selector:
    app: cafeteria-customer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
