kube/keycloak.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafeteria-keycloak-dep
  namespace: cafeteria
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cafeteria-keycloak
  template:
    metadata:
      labels:
        app: cafeteria-keycloak
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: cafeteria-keycloak-container
          image: keycloak/keycloak:26.5
          args:
            - "start"
            - "--import-realm"
            - "--proxy-headers=xforwarded"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /health/started
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 6
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: realm-config
              mountPath: /opt/keycloak/data/import
              readOnly: true
            # - name: keycloak-data
            #   mountPath: /opt/keycloak/data
      volumes:
        - name: realm-config
          configMap:
            name: cafeteria-keycloak-realm
        # - name: keycloak-data
        #   persistentVolumeClaim:
        #     claimName: cafeteria-keycloak-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: cafeteria-keycloak-svc
  namespace: cafeteria
spec:
  selector:
    app: cafeteria-keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: cafeteria-keycloak-pvc
#   namespace: cafeteria
# spec:
#   accessModes:
#     - ReadWriteOnce
#   storageClassName: managed-csi
#   resources:
#     requests:
#       storage: 2Gi
