kube/management.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafeteria-management-dep
  namespace: cafeteria
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cafeteria-management

  template:
    metadata:
      labels:
        app: cafeteria-management
    spec:
      containers:
        - name: cafeteria-management-container
          image: tjwalkr3/cafeteria-management:$CONTAINER_VERSION
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: cafeteria-management-svc
  namespace: cafeteria
spec:
  selector:
    app: cafeteria-management
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
